################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( MultiplicacionMatrices )

add_executable(Multiplicacion main.cpp)
